<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
 >

    <ImageView
        android:id="@+id/imgZasterLogo"
        android:layout_width="186dp"
        android:layout_height="163dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/ic_user_icon_foreground"
        android:hint="username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgZasterLogo" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edit_background"
        android:drawableStart="@drawable/ic_password_icon_foreground"
        android:hint="password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="135dp"
        android:layout_height="47dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="165dp"
        android:background="@drawable/ic_standard_button"
        android:text="LogIn"
        android:textColor="@color/colorZasterDarkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btn_register_login_page"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_standard_button"
        android:text="Register"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgZasterLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_500Error"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/ic_standard_button"
        android:text="500 Error"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>